Changes in Artist entity